--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Segundo Periodo</title>
 </head>
-<body background="Fondo.jpg">
+<body background="Fondo.JPG">
 	<meta charset="utf-8">
 	<center><font style="position: absolute;top: 50px;left: 550px; color: white;"><a href="">Tarea #1: Diagrama de Flujo</a></font></center>
 	<center><font style="position: absolute;top: 100px;left: 525px; color: white;"><a href="">Tarea #2: Ciclos C++ y diagnóstico</a></font></center>
