--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body background="Fondo.JPG">
 	<meta charset="utf-8">
+	<center><font style="color: white;"><a href="https://johanxb800.github.io/-Work-page-/">Volver</a></font></center>
 	<center><font style="position: absolute;top: 50px;left: 550px; color: white;"><a href="">Tarea #1: Diagrama de Flujo</a></font></center>
 	<center><font style="position: absolute;top: 100px;left: 525px; color: white;"><a href="">Tarea #2: Ciclos C++ y diagnóstico</a></font></center>
 	<center><font style="position: absolute;top: 150px;left: 525px; color: white;"><a href="">Tarea #3: Manejo de Espacios Css</a></font></center>
